fix: rewrote the file structure & images addresses

--- a/hotels/catalog.html
+++ b/hotels/catalog.html
@@ -10,7 +10,7 @@
     <header data-test="header" class="main-header">
         <nav>
         <a class="logo">
-            <img src="../../" alt="logo city of sedona" width="140" height="70">
+            <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
         </a>
         <ul class="site-navigation">
             <li class="site-navigation-item">
@@ -24,12 +24,12 @@
             </li>
         </ul>
         <form action="#" method="POST">
-            <img src="../../assets/img/icons/search.svg" alt="search" width="20" height="20">
+            <img src="../img/icons/search.svg" alt="search" width="20" height="20">
             <input type="search" placeholder="Поиск:" hidden>
             <!-- это попап?? -->
         </form>
         <button claas="like-button" type="button">
-            <img src="../../assets/img/icons/heart.svg" alt="put a like" width="20" height="20">
+            <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
         </button>
         <button type="button" onclick="document.location=''">Хочу сюда!</button>
         <!--это ссылка на попап -->
@@ -39,8 +39,8 @@
         <section data-test=" filter">
             <h1>Гостиницы Седоны</h1>
             <div>
-                <img src="../../assets/img/icons/home-page.svg" alt="link on home page" width="13" height="15">
-                <img src="../../assets/img/icons/breadcrumbs.svg"
+                <img src="../img/icons/home-page.svg" alt="link on home page" width="13" height="15">
+                <img src="../img/icons/breadcrumbs.svg"
                 alt="the arrow shows you are on the hotel page" width="6.39" height="9.94">
                 <span>Гостиницы</span>
             </div>
@@ -85,23 +85,23 @@
         <ul class="social-list">
             <li class="social-item">
                 <a href="#">
-                    <img src="../../assets/img/icons/vk.svg" alt="our vk page" width="" height="">
+                    <img src="../img/icons/vk.svg" alt="our vk page" width="" height="">
                 </a>
             </li>
             <li class="social-item">
                 <a href="#">
-                    <img src="../../assets/img/icons/telegram.svg" alt="our telegram" width="" height="">
+                    <img src="../img/icons/telegram.svg" alt="our telegram" width="" height="">
                 </a>
             </li>
             <li class="social-item">
             <a href="#">
-                <img src="../../assets/img/icons/youtube.svg" alt="your youtube channel" width="" height="">
+                <img src="../img/icons/youtube.svg" alt="your youtube channel" width="" height="">
                 </a>
             </li>
         </ul>
         <p>+7 (812) 812-12-12</p>
         <a href="#">
-            <img src="../../assets/img/icons/logo-htmlacademy.svg" alt="html academy website" width="" height="">
+            <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website" width="" height="">
         </a>
     </footer>
 </body>
