fix: index.html & catalog.html

--- a/hotels/catalog.html
+++ b/hotels/catalog.html
@@ -9,37 +9,48 @@
 <body>
     <header data-test="header" class="main-header">
         <nav>
-        <a class="logo">
-            <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
-        </a>
-        <ul class="site-navigation">
-            <li class="site-navigation-item">
-                <a href="#">Главная</a>
-            </li>
-            <li   li class="site-navigation-item">
-                <a href="#">О седоне</a>
-            </li>
-            <li class="site-navigation-item">
-                <a href="#">Гостиницы</a>
-            </li>
-        </ul>
-        <form action="#" method="POST">
-            <img src="../img/icons/search.svg" alt="search" width="20" height="20">
-            <input type="search" placeholder="Поиск:" hidden>
-            <!-- это попап?? -->
-        </form>
-        <button claas="like-button" type="button">
-            <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
-        </button>
-        <button type="button" onclick="document.location=''">Хочу сюда!</button>
-        <!--это ссылка на попап -->
+            <a class="logo">
+                <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
+            </a>
+            <ul class="navigation">
+                <li class="navigation-item">
+                    <a href="#">Главная</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">О седоне</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">Гостиницы</a>
+                </li>
+            </ul>
+            <ul class="nav-buttons">
+                <li class="nav-button">
+                    <button class="search-button">
+                        <img src="../img/icons/search.svg" alt="search" width="20" height="20">
+                    </button>
+                </li>
+                <li class="nav-button">
+                    <button claas="like-button" type="button">
+                        <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
+                    </button>
+                </li>
+                <li class="nav-button">
+                    <button type="button" onclick="document.location='#'">
+                        Хочу сюда!
+                    </button>
+                    <!--это ссылка на попап -->
+                </li>
+            </ul>
         </nav>
     </header>
     <main data-test="main">
         <section data-test=" filter">
             <h1>Гостиницы Седоны</h1>
             <div>
-                <img src="../img/icons/home-page.svg" alt="link on home page" width="13" height="15">
+                <a href="#">
+                    <!-- link on home page -->
+                    <img src="../img/icons/home-page.svg" alt="link on home page" width="13" height="15">
+                </a>
                 <img src="../img/icons/breadcrumbs.svg"
                 alt="the arrow shows you are on the hotel page" width="6.39" height="9.94">
                 <span>Гостиницы</span>
@@ -63,44 +74,180 @@
                 <fieldset>
                     <legend>Тип жилья:</legend>
                     <p>
-                        <input type="radio" name="hotel" id="hotel" value="hotel">
-                        <label for="">Гостиница</label>
+                        <input type="radio" name="hotel" id="hotel" value="hotel" checked>
+                        <label for="hotel">Гостиница</label>
                     </p>
                     <p>
                         <input type="radio" name="motel" id="motel" value="motel">
-                        <label for="">Мотель</label>
+                        <label for="motel">Мотель</label>
                     </p>
                     <p>
                         <input type="radio" name="apartments" id="apartments" value="apartments">
-                        <label for="">Апартаменты</label>
+                        <label for="apartments">Апартаменты</label>
                     </p>
                 </fieldset>
+                <fieldset>
+                    <legend>Стоимость,<span>₽</span>:</legend>
+                    <input type="text" min="0" max="15000" name="min-price" id="min-price" value="0">
+                    <label for="min-price">от</label>
+                    <input type="text" min="0" max="15000" name="max-price" id="max-price" value="9000">
+                    <label for="max-price">до</label>
+                    <b>
+                        <input type="range" min="0" max="15000" step="1">
+                    </b>
+                    <!-- можно input вложить в <b>? -->
+                </fieldset>
+                <button type="sumbit" class="apply">Применить</button>
+                <button type="sumbit" class="reset">Сбросить</button>
             </form>
-            <p>Стоимость,<span>₽</span>:</p>
         </section>
-        <section data-test="catalog">...</section>
-        <section data-test="subscribe">...</section>
+        <section data-test="catalog">
+            <h2>Найдено гостиниц: 38</h2>
+            <select name="sorting" id="sorting">
+                <option value="cheap">Сначала дешевые</option>
+                <option value="costly">Сначала дорогие</option>
+                <option value="rating">По рейтингу</option>
+            </select>
+            <ul class="layout-list">
+                <li class="layout-item">
+                    <button type="button" class="layout">
+                        <img src="../img/icons/grid-mode.svg" alt="grid-mode" width="16" height="14">
+                    </button>
+                </li>
+                <li class="layout-item">
+                    <button type="button" class="layout">
+                        <img src="../img/icons/caption-mode.svg" alt="caption-mode" width="16" height="14">
+                    </button>
+                </li>
+                <li class="layout-item">
+                    <button type="button" class="layout">
+                        <img src="../img/icons/list-mode.svg" alt="list-mod" width="16" height="14">
+                    </button>
+                </li>
+            </ul>
+            <ul class="hotels-list">
+                <li class="hotel-item">
+                    <img src="../img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
+                    <h3>Amara Resort & Spa</h3>
+                    <p class="name-and-price">
+                        <span>Гостиница</span>
+                        <span>От 4000 ₽</span>
+                    </p>
+                    <div class="more-and-like">
+                        <a class="button-more" href="#">подробнее</a>
+                        <button type="button">в избранное</button>
+                    </div>
+                    <div class="stars-and-rank">
+                        <div class="stars">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                        </div>
+                        <p>Рейтинг: <span>8,5</span></p>
+                    </div>
+                </li>
+                <li class="hotel-item">
+                    <img src="../img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
+                    <h3>Villas at Poco Diablo</h3>
+                    <p class="name-and-price">
+                        <span>Гостиница</span>
+                        <span>От 5000 ₽</span>
+                    </p>
+                    <div class="more-and-like">
+                        <a class="button-more" href="#">подробнее</a>
+                        <button type="button">в избранном</button>
+                    </div>
+                    <div class="stars-and-rank">
+                        <div class="stars">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                        </div>
+                        <p>Рейтинг: <span>9,2</span></p>
+                    </div>
+                </li>
+                <li class="hotel-item">
+                    <img src="../img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
+                    <h3>Desert Quail Inn</h3>
+                    <p class="name-and-price">
+                        <span>Гостиница</span>
+                        <span>От 2500 ₽</span>
+                    </p>
+                    <div class="more-and-like">
+                        <a class="button-more" href="#">подробнее</a>
+                        <button type="button">в избранное</button>
+                    </div>
+                    <div class="stars-and-rank">
+                        <div class="stars">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                        </div>
+                        <p>Рейтинг: <span>6,9</span></p>
+                    </div>
+                </li>
+                <li class="hotel-item">
+                    <img src="../img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
+                    <h3>GreenTree Inn</h3>
+                    <p class="name-and-price">
+                        <span>Гостиница</span>
+                        <span>От 1500 ₽</span>
+                    </p>
+                    <div class="more-and-like">
+                        <a class="button-more" href="#">подробнее</a>
+                        <button type="button">в избранное</button>
+                    </div>
+                    <div class="stars-and-rank">
+                        <div class="stars">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="../img/icons/star.svg" alt="rating star">
+                        </div>
+                        <p>Рейтинг: <span>5,0</span></p>
+                    </div>
+                </li>
+            </ul>
+            <div class="pages-buttons">
+                <button class="page-button">1</button>
+                <button class="page-button">2</button>
+                <button class="page-button">3</button>
+                <button class="page-button">4</button>
+                <span>...</span>
+                <button class="page-button">10</button>
+            </div>
+        </section>
+        <section data-test="subscribe" class="subscription">
+            <h2>Подпишитесь на рассылку</h2>
+            <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <form action="" method="post">
+                <input type="email" name="email" id="email" placeholder="Ваш e-mail">
+                <input type="submit" name="submit" value="Подписаться">
+            </form>
+        </section>
     </main>
     <footer data-test="footer" class="main-footer">
         <ul class="social-list">
             <li class="social-item">
-                <a href="#">
+                <a href="https://vk.com/htmlacademy">
                     <img src="../img/icons/vk.svg" alt="our vk page" width="" height="">
                 </a>
             </li>
             <li class="social-item">
-                <a href="#">
+                <a href="https://t.me/htmlacademy">
                     <img src="../img/icons/telegram.svg" alt="our telegram" width="" height="">
                 </a>
             </li>
             <li class="social-item">
-            <a href="#">
+            <a href="https://www.youtube.com/user/htmlacademyru">
                 <img src="../img/icons/youtube.svg" alt="your youtube channel" width="" height="">
                 </a>
             </li>
         </ul>
-        <p>+7 (812) 812-12-12</p>
-        <a href="#">
+        <span class=”phone”>
+            <a href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </span>
+        <a href=" https://htmlacademy.ru/">
             <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website" width="" height="">
         </a>
     </footer>
