feat: add links in index.html

--- a/main/index.html
+++ b/main/index.html
@@ -19,10 +19,10 @@
             <a href="#">Главная</a>
           </li>
           <li class="navigation-item">
-            <a href="#">О седоне</a>
+            <a href="#advantages">О седоне</a>
           </li>
           <li class="navigation-item">
-            <a href="#">Гостиницы</a>
+            <a href="../hotels/catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="nav-buttons">
@@ -54,7 +54,7 @@
           заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
-      <section data-test="advantages" class="advantages">
+      <section data-test="advantages" class="advantages" id="advantages">
           <div class="advantage-item">
             <h3 class="advantages-h3">Настоящий городок</h3>
             <div class="advantages-separator"></div>
