--- a/hotels/catalog.html
+++ b/hotels/catalog.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="../img/favicon/favicon.png">
+    <title>HTML Academy: Седона</title>
 </head>
 <body>
     <header data-test="header" class="main-header">
         <nav>
-            <a class="logo">
+            <a href="../main/index.html" class="logo">
                 <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
             </a>
             <ul class="navigation">
@@ -19,18 +22,18 @@
                 <li class="navigation-item">
                     <a href="#">О седоне</a>
                 </li>
-                <li class="navigation-item">
+                <li class="navigation-item current-link">
                     <a href="#">Гостиницы</a>
                 </li>
             </ul>
             <ul class="nav-buttons">
                 <li class="nav-button">
-                    <button class="search-button">
+                    <button class="search-button" aria-label="search button">
                         <img src="../img/icons/search.svg" alt="search" width="20" height="20">
                     </button>
                 </li>
                 <li class="nav-button">
-                    <button claas="like-button" type="button">
+                    <button class="like-button" type="button" aria-label="like button">
                         <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
                     </button>
                 </li>
@@ -47,58 +50,60 @@
         <section data-test=" filter">
             <h1>Гостиницы Седоны</h1>
             <div>
-                <a href="#">
-                    <!-- link on home page -->
+                <a href="../main/index.html">
                     <img src="../img/icons/home-page.svg" alt="link on home page" width="13" height="15">
                 </a>
                 <img src="../img/icons/breadcrumbs.svg"
-                alt="the arrow shows you are on the hotel page" width="6.39" height="9.94">
+                alt="the arrow shows you are on the hotel page" width="6" height="10">
                 <span>Гостиницы</span>
             </div>
-            <form>
+            <form action="https://echo.htmlacademy.ru/" method="get">
                 <fieldset>
                     <legend>Инфраструктура:</legend>
                     <p>
-                        <input type="checkbox" name="usability" id="pool" value="pool">
+                        <input type="checkbox" name="pool" id="pool" checked>
                         <label for="pool">Бассейн</label>
                     </p>
                     <p>
-                        <input type="checkbox" name="usability" id="parking" value="parking">
+                        <input type="checkbox" name="parking" id="parking" checked>
                         <label for="parking">Парковка</label>
                     </p>
                     <p>
-                        <input type="checkbox" name="usability" id="wi-fi" value="wi-fi">
+                        <input type="checkbox" name="wi-fi" id="wi-fi">
                         <label for="wi-fi">Wi-Fi</label>
                     </p>
                 </fieldset>
                 <fieldset>
                     <legend>Тип жилья:</legend>
                     <p>
-                        <input type="radio" name="hotel" id="hotel" value="hotel" checked>
+                        <input type="radio" name="house-type" id="hotel" value="hotel" checked>
                         <label for="hotel">Гостиница</label>
                     </p>
                     <p>
-                        <input type="radio" name="motel" id="motel" value="motel">
+                        <input type="radio" name="house-type" id="motel" value="motel">
                         <label for="motel">Мотель</label>
                     </p>
                     <p>
-                        <input type="radio" name="apartments" id="apartments" value="apartments">
+                        <input type="radio" name="house-type" id="apartments" value="apartments">
                         <label for="apartments">Апартаменты</label>
                     </p>
                 </fieldset>
                 <fieldset>
                     <legend>Стоимость,<span>₽</span>:</legend>
-                    <input type="text" min="0" max="15000" name="min-price" id="min-price" value="0">
-                    <label for="min-price">от</label>
-                    <input type="text" min="0" max="15000" name="max-price" id="max-price" value="9000">
-                    <label for="max-price">до</label>
+                    <label for="min-price">
+                        <input type="number" min="0" max="15000" name="min-price" id="min-price" value="0">
+                        от
+                    </label>
+                    <label for="max-price">
+                        <input type="number" min="0" max="15000" name="max-price" id="max-price" value="9000">
+                    до</label>
                     <b>
                         <input type="range" min="0" max="15000" step="1">
                     </b>
                     <!-- можно input вложить в <b>? -->
                 </fieldset>
-                <button type="sumbit" class="apply">Применить</button>
-                <button type="sumbit" class="reset">Сбросить</button>
+                <button class="apply">Применить</button>
+                <button class="reset">Сбросить</button>
             </form>
         </section>
         <section data-test="catalog">
@@ -110,17 +115,17 @@
             </select>
             <ul class="layout-list">
                 <li class="layout-item">
-                    <button type="button" class="layout">
+                    <button type="button" class="layout" aria-label="layout grid">
                         <img src="../img/icons/grid-mode.svg" alt="grid-mode" width="16" height="14">
                     </button>
                 </li>
                 <li class="layout-item">
-                    <button type="button" class="layout">
+                    <button type="button" class="layout" aria-label="layout picture then description">
                         <img src="../img/icons/caption-mode.svg" alt="caption-mode" width="16" height="14">
                     </button>
                 </li>
                 <li class="layout-item">
-                    <button type="button" class="layout">
+                    <button type="button" class="layout" aria-label="list">
                         <img src="../img/icons/list-mode.svg" alt="list-mod" width="16" height="14">
                     </button>
                 </li>
@@ -128,7 +133,9 @@
             <ul class="hotels-list">
                 <li class="hotel-item">
                     <img src="../img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
-                    <h3>Amara Resort & Spa</h3>
+                    <a href="#" class="about-hotel">
+                        <h3>Amara Resort & Spa</h3>
+                    </a>
                     <p class="name-and-price">
                         <span>Гостиница</span>
                         <span>От 4000 ₽</span>
@@ -149,7 +156,9 @@
                 </li>
                 <li class="hotel-item">
                     <img src="../img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
-                    <h3>Villas at Poco Diablo</h3>
+                    <a href="#" class="about-hotel">
+                        <h3>Villas at Poco Diablo</h3>
+                    </a>
                     <p class="name-and-price">
                         <span>Гостиница</span>
                         <span>От 5000 ₽</span>
@@ -170,7 +179,9 @@
                 </li>
                 <li class="hotel-item">
                     <img src="../img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
-                    <h3>Desert Quail Inn</h3>
+                    <a href="#" class="about-hotel">
+                        <h3>Desert Quail Inn</h3>
+                    </a>
                     <p class="name-and-price">
                         <span>Гостиница</span>
                         <span>От 2500 ₽</span>
@@ -190,7 +201,9 @@
                 </li>
                 <li class="hotel-item">
                     <img src="../img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
-                    <h3>GreenTree Inn</h3>
+                    <a href="#" class="about-hotel">
+                        <h3>GreenTree Inn</h3>
+                    </a>
                     <p class="name-and-price">
                         <span>Гостиница</span>
                         <span>От 1500 ₽</span>
@@ -208,19 +221,31 @@
                     </div>
                 </li>
             </ul>
-            <div class="pages-buttons">
-                <button class="page-button">1</button>
-                <button class="page-button">2</button>
-                <button class="page-button">3</button>
-                <button class="page-button">4</button>
-                <span>...</span>
-                <button class="page-button">10</button>
-            </div>
+            <ul class="pagination">
+                <li class="pagination-item">
+                    <a class="pagination-link pagination-current" href="#">1</a>
+                </li>
+                <li class="pagination-item">
+                    <a class="pagination-link" href="#">2</a>
+                </li>
+                <li class="pagination-item">
+                    <a class="pagination-link" href="#">3</a>
+                </li>
+                <li class="pagination-item">
+                    <a class="pagination-link" href="#">4</a>
+                </li>
+                <li class="pagination-item">
+                    <a class="pagination-link" href="#">...</a>
+                </li>
+                <li class="pagination-item">
+                    <a class="pagination-link" href="#">10</a>
+                </li>
+            </ul>
         </section>
         <section data-test="subscribe" class="subscription">
             <h2>Подпишитесь на рассылку</h2>
             <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-            <form action="" method="post">
+            <form action="https://echo.htmlacademy.ru/" method="post">
                 <input type="email" name="email" id="email" placeholder="Ваш e-mail">
                 <input type="submit" name="submit" value="Подписаться">
             </form>
@@ -230,17 +255,17 @@
         <ul class="social-list">
             <li class="social-item">
                 <a href="https://vk.com/htmlacademy">
-                    <img src="../img/icons/vk.svg" alt="our vk page" width="" height="">
+                    <img src="../img/icons/vk.svg" alt="vk page">
                 </a>
             </li>
             <li class="social-item">
                 <a href="https://t.me/htmlacademy">
-                    <img src="../img/icons/telegram.svg" alt="our telegram" width="" height="">
+                    <img src="../img/icons/telegram.svg" alt="telegram">
                 </a>
             </li>
             <li class="social-item">
             <a href="https://www.youtube.com/user/htmlacademyru">
-                <img src="../img/icons/youtube.svg" alt="your youtube channel" width="" height="">
+                <img src="../img/icons/youtube.svg" alt="youtube channel">
                 </a>
             </li>
         </ul>
@@ -248,7 +273,7 @@
             <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </span>
         <a href=" https://htmlacademy.ru/">
-            <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website" width="" height="">
+            <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website">
         </a>
     </footer>
 </body>
