--- a/main/index.html
+++ b/main/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial.scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="../img/favicon/favicon.png">
     <title>HTML Academy: Седона</title>
@@ -11,11 +11,11 @@
   <body>
     <header data-test="header" class="main-header">
       <nav>
-        <a class="logo">
+        <a href="index.html" class="logo">
           <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
         </a>
         <ul class="navigation">
-          <li class="navigation-item">
+          <li class="navigation-item current-link">
             <a href="#">Главная</a>
           </li>
           <li class="navigation-item">
@@ -27,17 +27,19 @@
         </ul>
         <ul class="nav-buttons">
           <li class="nav-button">
-            <button class="search-button">
+            <button class="search-button" aria-label="search button">
               <img src="../img/icons/search.svg" alt="search" width="20" height="20">
             </button>
           </li>
           <li class="nav-button">
-            <button claas="like-button" type="button">
+            <button class="like-button" type="button" aria-label="like button">
               <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
             </button>
           </li>
           <li class="nav-button">
-            <button type="button" onclick="document.location='#'">Хочу сюда!</button>
+            <button type="button" onclick="document.location='#'">
+              Хочу сюда!
+            </button>
             <!--это ссылка на попап -->
           </li>
         </ul>
@@ -113,13 +115,15 @@
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button type="button" onclick="document.location='#'">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+        <button type="button" onclick="document.location='#'">
+          ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
+        </button>
         <!-- ссылка на попап а не стр -->
       </section>
       <section data-test="subscribe" class="subscription">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="" method="post">
+        <form action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" id="email" placeholder="Ваш e-mail">
           <input type="submit" value="Подписаться">
         </form>
@@ -129,17 +133,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="../img/icons/vk.svg" alt="our vk page" width="" height="">
+            <img src="../img/icons/vk.svg" alt="vk page">
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="../img/icons/telegram.svg" alt="our telegram" width="" height="">
+            <img src="../img/icons/telegram.svg" alt="telegram">
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="../img/icons/youtube.svg" alt="your youtube channel" width="" height="">
+            <img src="../img/icons/youtube.svg" alt="youtube channel">
           </a>
         </li>
       </ul>
@@ -147,7 +151,7 @@
         <a href="tel:+78128121212">+7 (812) 812-12-12</a>
       </span>
       <a href=" https://htmlacademy.ru/">
-        <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website" width="" height="">
+        <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website">
       </a>
     </footer>
   </body>
