fix: file structure for keksobot

--- a/catalog.html
+++ b/catalog.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="../img/favicon/favicon.png">
+    <link rel="stylesheet" href="catalog-style.css">
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon.png">
     <title>HTML Academy: Седона</title>
 </head>
 <body>
     <header data-test="header" class="main-header">
         <nav>
-            <a href="../main/index.html" class="logo">
-                <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
+            <a href="index.html" class="logo">
+                <img src="img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
             </a>
             <ul class="navigation">
                 <li class="navigation-item">
-                    <a href="#">Главная</a>
+                    <a href="index.html">Главная</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#">О седоне</a>
+                    <a href="index.html/#advanteges">О седоне</a>
                 </li>
                 <li class="navigation-item current-link">
                     <a href="#">Гостиницы</a>
@@ -29,12 +29,12 @@
             <ul class="nav-buttons">
                 <li class="nav-button">
                     <button class="search-button" aria-label="search button">
-                        <img src="../img/icons/search.svg" alt="search" width="20" height="20">
+                        <img src="img/icons/search.svg" alt="search" width="20" height="20">
                     </button>
                 </li>
                 <li class="nav-button">
                     <button class="like-button" type="button" aria-label="like button">
-                        <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
+                        <img src="img/icons/heart.svg" alt="put a like" width="20" height="20">
                     </button>
                 </li>
                 <li class="nav-button">
@@ -50,10 +50,10 @@
         <section data-test=" filter">
             <h1>Гостиницы Седоны</h1>
             <div>
-                <a href="../main/index.html">
-                    <img src="../img/icons/home-page.svg" alt="link on home page" width="13" height="15">
+                <a href="index.html">
+                    <img src="img/icons/home-page.svg" alt="link on home page" width="13" height="15">
                 </a>
-                <img src="../img/icons/breadcrumbs.svg"
+                <img src="img/icons/breadcrumbs.svg"
                 alt="the arrow shows you are on the hotel page" width="6" height="10">
                 <span>Гостиницы</span>
             </div>
@@ -116,23 +116,23 @@
             <ul class="layout-list">
                 <li class="layout-item">
                     <button type="button" class="layout" aria-label="layout grid">
-                        <img src="../img/icons/grid-mode.svg" alt="grid-mode" width="16" height="14">
+                        <img src="img/icons/grid-mode.svg" alt="grid-mode" width="16" height="14">
                     </button>
                 </li>
                 <li class="layout-item">
                     <button type="button" class="layout" aria-label="layout picture then description">
-                        <img src="../img/icons/caption-mode.svg" alt="caption-mode" width="16" height="14">
+                        <img src="img/icons/caption-mode.svg" alt="caption-mode" width="16" height="14">
                     </button>
                 </li>
                 <li class="layout-item">
                     <button type="button" class="layout" aria-label="list">
-                        <img src="../img/icons/list-mode.svg" alt="list-mod" width="16" height="14">
+                        <img src="img/icons/list-mode.svg" alt="list-mod" width="16" height="14">
                     </button>
                 </li>
             </ul>
             <ul class="hotels-list">
                 <li class="hotel-item">
-                    <img src="../img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
+                    <img src="img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
                     <a href="#" class="about-hotel">
                         <h3>Amara Resort & Spa</h3>
                     </a>
@@ -146,16 +146,16 @@
                     </div>
                     <div class="stars-and-rank">
                         <div class="stars">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
                         </div>
                         <p>Рейтинг: <span>8,5</span></p>
                     </div>
                 </li>
                 <li class="hotel-item">
-                    <img src="../img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
+                    <img src="img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
                     <a href="#" class="about-hotel">
                         <h3>Villas at Poco Diablo</h3>
                     </a>
@@ -169,16 +169,16 @@
                     </div>
                     <div class="stars-and-rank">
                         <div class="stars">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
                         </div>
                         <p>Рейтинг: <span>9,2</span></p>
                     </div>
                 </li>
                 <li class="hotel-item">
-                    <img src="../img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
+                    <img src="img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
                     <a href="#" class="about-hotel">
                         <h3>Desert Quail Inn</h3>
                     </a>
@@ -192,15 +192,15 @@
                     </div>
                     <div class="stars-and-rank">
                         <div class="stars">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
                         </div>
                         <p>Рейтинг: <span>6,9</span></p>
                     </div>
                 </li>
                 <li class="hotel-item">
-                    <img src="../img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
+                    <img src="img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
                     <a href="#" class="about-hotel">
                         <h3>GreenTree Inn</h3>
                     </a>
@@ -214,8 +214,8 @@
                     </div>
                     <div class="stars-and-rank">
                         <div class="stars">
-                            <img src="../img/icons/star.svg" alt="rating star">
-                            <img src="../img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
+                            <img src="img/icons/star.svg" alt="rating star">
                         </div>
                         <p>Рейтинг: <span>5,0</span></p>
                     </div>
@@ -255,17 +255,17 @@
         <ul class="social-list">
             <li class="social-item">
                 <a href="https://vk.com/htmlacademy">
-                    <img src="../img/icons/vk.svg" alt="vk page">
+                    <img src="img/icons/vk.svg" alt="vk page">
                 </a>
             </li>
             <li class="social-item">
                 <a href="https://t.me/htmlacademy">
-                    <img src="../img/icons/telegram.svg" alt="telegram">
+                    <img src="img/icons/telegram.svg" alt="telegram">
                 </a>
             </li>
             <li class="social-item">
             <a href="https://www.youtube.com/user/htmlacademyru">
-                <img src="../img/icons/youtube.svg" alt="youtube channel">
+                <img src="img/icons/youtube.svg" alt="youtube channel">
                 </a>
             </li>
         </ul>
@@ -273,7 +273,7 @@
             <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </span>
         <a href=" https://htmlacademy.ru/">
-            <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website">
+            <img src="img/icons/logo-htmlacademy.svg" alt="html academy website">
         </a>
     </footer>
 </body>
