--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial.scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="../img/favicon/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="../img/favicon/favicon.png">
+    <link rel="stylesheet" href="main-style.css">
+    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon.png">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
     <header data-test="header" class="main-header">
       <nav>
         <a href="index.html" class="logo">
-          <img src="../img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
+          <img src="img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
         </a>
         <ul class="navigation">
           <li class="navigation-item current-link">
@@ -22,18 +22,18 @@
             <a href="#advantages">О седоне</a>
           </li>
           <li class="navigation-item">
-            <a href="../hotels/catalog.html">Гостиницы</a>
+            <a href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="nav-buttons">
           <li class="nav-button">
             <button class="search-button" aria-label="search button">
-              <img src="../img/icons/search.svg" alt="search" width="20" height="20">
+              <img src="img/icons/search.svg" alt="search" width="20" height="20">
             </button>
           </li>
           <li class="nav-button">
             <button class="like-button" type="button" aria-label="like button">
-              <img src="../img/icons/heart.svg" alt="put a like" width="20" height="20">
+              <img src="img/icons/heart.svg" alt="put a like" width="20" height="20">
             </button>
           </li>
           <li class="nav-button">
@@ -49,9 +49,9 @@
       <section data-test="hero" class="hero">
         <h1 class="visually-hidden">sedona</h1>
         <!-- hidden h1, write for screenreaders -->
-        <img src="../img/icons/welcome.svg" alt="welcom to the gorgeous sedona,
+        <img src="img/icons/welcome.svg" alt="welcom to the gorgeous sedona,
         because the grand canyon sucks">
-        <img src="../img/images/divider.png" alt="divider">
+        <img src="img/images/divider.png" alt="divider">
         <h2 class="about-sedona">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -63,7 +63,7 @@
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
           <div class="advantage-item img-advantage">
-            <img src="../img/images/true-city.jpg" alt="city photo">
+            <img src="img/images/true-city.jpg" alt="city photo">
           </div>
           <div class="advantage-item">
             <h3 class="advantages-h3">Небольшая площадь</h3>
@@ -81,7 +81,7 @@
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </div>
           <div class="advantage-item img-advantage">
-            <img src="../img/images/devil-bridge.jpg" alt="canyon photo">
+            <img src="img/images/devil-bridge.jpg" alt="canyon photo">
           </div>
           <div class="advantage-item">
             <h3 class="advantages-h3">Там есть мост дьявола</h3>
@@ -92,19 +92,19 @@
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="advantage-list">
           <li class="advantage-item">
-            <img src="../img/icons/home.svg" alt="house" width="75" height="72">
+            <img src="img/icons/home.svg" alt="house" width="75" height="72">
             <h3 class="recommend-h3">Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
           </li>
           <li class="advantage-item">
-            <img src="../img/icons/food.svg" alt="burger" width="75" height="72">
+            <img src="img/icons/food.svg" alt="burger" width="75" height="72">
             <h3 class="recommend-h3">Еда</h3>
             <p>Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advantage-item">
-            <img src="../img/icons/souvenir.svg" alt="present" width="75" height="72">
+            <img src="img/icons/souvenir.svg" alt="present" width="75" height="72">
             <h3 class="recommend-h3">Сувениры</h3>
             <p>Не только китайского,
               но и настоящего местного производства!</p>
@@ -133,17 +133,17 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="../img/icons/vk.svg" alt="vk page">
+            <img src="img/icons/vk.svg" alt="vk page">
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="../img/icons/telegram.svg" alt="telegram">
+            <img src="img/icons/telegram.svg" alt="telegram">
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="../img/icons/youtube.svg" alt="youtube channel">
+            <img src="img/icons/youtube.svg" alt="youtube channel">
           </a>
         </li>
       </ul>
@@ -151,7 +151,7 @@
         <a href="tel:+78128121212">+7 (812) 812-12-12</a>
       </span>
       <a href=" https://htmlacademy.ru/">
-        <img src="../img/icons/logo-htmlacademy.svg" alt="html academy website">
+        <img src="img/icons/logo-htmlacademy.svg" alt="html academy website">
       </a>
     </footer>
   </body>
